--- a/Bitbird.Core.Tests/Bitbird.Core.Tests.csproj
+++ b/Bitbird.Core.Tests/Bitbird.Core.Tests.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="ApiTests.cs" />
     <Compile Include="DataAccess\JsonAccessBroker.cs" />
+    <Compile Include="JsonApi\JsonApiLinkObjectTests.cs" />
+    <Compile Include="JsonApi\JsonApiLinkTests.cs" />
     <Compile Include="Models\Fahrer.cs" />
     <Compile Include="Models\Fahrzeug.cs" />
     <Compile Include="Models\Firma.cs" />
