Relationships serialization and deserialization improved

--- a/Bitbird.Core.Tests/Bitbird.Core.Tests.csproj
+++ b/Bitbird.Core.Tests/Bitbird.Core.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ApiTests.cs" />
     <Compile Include="JsonApi\JsonApiLinkObjectTests.cs" />
     <Compile Include="JsonApi\JsonApiLinkTests.cs" />
+    <Compile Include="JsonApi\JsonApiRelationshipObjectBaseTests.cs" />
     <Compile Include="JsonApi\JsonApiResourceObjectTests.cs" />
     <Compile Include="Models\Fahrer.cs" />
     <Compile Include="Models\Fahrzeug.cs" />
