--- a/Bitbird.Core.Json.Helpers/Bitbird.Core.Json.Helpers.ApiResource.csproj
+++ b/Bitbird.Core.Json.Helpers/Bitbird.Core.Json.Helpers.ApiResource.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.csproj" />
+    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.Json.csproj" />
   </ItemGroup>
 
 </Project>
