--- a/Bitbird.Core.Tests/Bitbird.Core.Json.Tests.csproj
+++ b/Bitbird.Core.Tests/Bitbird.Core.Json.Tests.csproj
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\MSTest.TestAdapter.1.4.0\build\net45\MSTest.TestAdapter.props" Condition="Exists('..\packages\MSTest.TestAdapter.1.4.0\build\net45\MSTest.TestAdapter.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A927500E-253A-4F4E-BECB-340FB8E1FFC3}</ProjectGuid>
+    <ProjectGuid>{D9D27DD1-72DC-42F8-9B7D-3D2A1A4C4D1D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bitbird.Core.Json.Helpers.Tests</RootNamespace>
-    <AssemblyName>Bitbird.Core.Json.Helpers.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Bitbird.Core.Tests</RootNamespace>
+    <AssemblyName>Bitbird.Core.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">15.0</VisualStudioVersion>
@@ -39,9 +38,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Humanizer, Version=2.5.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Humanizer.Core.2.5.16\lib\netstandard2.0\Humanizer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.4.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -51,24 +47,36 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json.Schema, Version=3.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.Schema.3.0.10\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ApiTests.cs" />
+    <Compile Include="JsonApi\JsonApiLinkObjectTests.cs" />
+    <Compile Include="JsonApi\JsonApiLinkTests.cs" />
+    <Compile Include="JsonApi\JsonApiRelationshipObjectBaseTests.cs" />
+    <Compile Include="JsonApi\JsonApiResourceObjectTests.cs" />
+    <Compile Include="JsonApi\IdConverterTests.cs" />
+    <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Fahrer.cs" />
+    <Compile Include="Models\Fahrzeug.cs" />
+    <Compile Include="Models\Firma.cs" />
+    <Compile Include="Models\ModelWithNoReferences.cs" />
+    <Compile Include="Models\ModelWithReferences.cs" />
+    <Compile Include="Models\ModelWithSelfReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bitbird.Core.Json.Helpers\Bitbird.Core.Json.Helpers.ApiResource.csproj">
-      <Project>{e5012a70-9ed8-4b14-af5e-ec83db50c607}</Project>
-      <Name>Bitbird.Core.Json.Helpers.ApiResource</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.csproj">
+    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.Json.csproj">
       <Project>{C225F77B-C2FD-4BAD-978F-2E2BD3B5DE0F}</Project>
-      <Name>Bitbird.Core</Name>
+      <Name>Bitbird.Core.Json</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
