--- a/Bitbird.Core.Json.Helpers.ApiResource.Tests/Bitbird.Core.Json.Helpers.ApiResource.Tests.csproj
+++ b/Bitbird.Core.Json.Helpers.ApiResource.Tests/Bitbird.Core.Json.Helpers.ApiResource.Tests.csproj
@@ -62,6 +62,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Bitbird.Core.Json.Helpers.JsonDataModel\Bitbird.Core.Json.Helpers.JsonDataModel.csproj">
+      <Project>{54CC940B-60AF-4D88-8691-B5CDC309C72E}</Project>
+      <Name>Bitbird.Core.Json.Helpers.JsonDataModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Bitbird.Core.Json.Helpers\Bitbird.Core.Json.Helpers.ApiResource.csproj">
       <Project>{e5012a70-9ed8-4b14-af5e-ec83db50c607}</Project>
       <Name>Bitbird.Core.Json.Helpers.ApiResource</Name>
