--- a/Bitbird.Core.Json.Helpers.JsonDataModel/Bitbird.Core.Json.Helpers.JsonDataModel.csproj
+++ b/Bitbird.Core.Json.Helpers.JsonDataModel/Bitbird.Core.Json.Helpers.JsonDataModel.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.csproj" />
     <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.Json.csproj" />
   </ItemGroup>
 
