--- a/Bitbird.Core.Json.Helpers.Base/Bitbird.Core.Json.Helpers.Base.csproj
+++ b/Bitbird.Core.Json.Helpers.Base/Bitbird.Core.Json.Helpers.Base.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.Json.csproj" />
+  </ItemGroup>
 
 </Project>
