--- a/Bitbird.Core.Json.Helpers/Bitbird.Core.Json.Helpers.ApiResource.csproj
+++ b/Bitbird.Core.Json.Helpers/Bitbird.Core.Json.Helpers.ApiResource.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.csproj" />
+    <ProjectReference Include="..\Bitbird.Core.Json.Helpers.JsonDataModel\Bitbird.Core.Json.Helpers.JsonDataModel.csproj" />
     <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.Json.csproj" />
   </ItemGroup>
 
