--- a/Bitbird.Core.Json.Helpers/Bitbird.Core.Json.Helpers.ApiResource.csproj
+++ b/Bitbird.Core.Json.Helpers/Bitbird.Core.Json.Helpers.ApiResource.csproj
@@ -11,8 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.csproj" />
-    <ProjectReference Include="..\Bitbird.Core.Json.Helpers.JsonDataModel\Bitbird.Core.Json.Helpers.JsonDataModel.csproj" />
-    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.Json.csproj" />
+    <ProjectReference Include="..\Bitbird.Core.Json\Bitbird.Core.Json.csproj" />
   </ItemGroup>
 
 </Project>
