--- a/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
+++ b/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
@@ -2,17 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.0</Version>
     <LangVersion>7.3</LangVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Humanizer" Version="2.5.16" />
+    <PackageReference Include="ClosedXML" Version="0.94.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.csproj" />
     <ProjectReference Include="..\Bitbird.Core.Json\Bitbird.Core.Json.csproj" />
+    <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 
 </Project>
