--- a/Bitbird.Core/Bitbird.Core.csproj
+++ b/Bitbird.Core/Bitbird.Core.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Query\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
