--- a/Bitbird.Core.Net/Bitbird.Core.Net.csproj
+++ b/Bitbird.Core.Net/Bitbird.Core.Net.csproj
@@ -49,6 +49,9 @@
     <Compile Include="Logging\EventLogLogger.cs" />
     <Compile Include="Logging\Logging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.csproj">
