--- a/Bitbird.Core.Data.Net/Bitbird.Core.Data.Net.csproj
+++ b/Bitbird.Core.Data.Net/Bitbird.Core.Data.Net.csproj
@@ -106,6 +106,9 @@
     <Compile Include="IsLocked\IsLockedFlagExtensions.cs" />
     <Compile Include="IsLocked\LockedState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Token\IToken.cs" />
     <Compile Include="Token\IUserToken.cs" />
     <Compile Include="Token\TokenExtensions.cs" />
