--- a/Bitbird.Core/Bitbird.Core.csproj
+++ b/Bitbird.Core/Bitbird.Core.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <Version>1.1.1</Version>
   </PropertyGroup>
 
+  <Import Project="..\SharedProperties.props" /> 
+  
   <ItemGroup>
     <Folder Include="Expressions\" />
     <Folder Include="Query\" />
