Shared Properties for .net standard projects

--- a/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
+++ b/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <LangVersion>7.3</LangVersion>
-    <Version>1.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
