added version info

--- a/Bitbird.Core.Json.Helpers.JsonDataModel/Bitbird.Core.Json.Helpers.JsonDataModel.csproj
+++ b/Bitbird.Core.Json.Helpers.JsonDataModel/Bitbird.Core.Json.Helpers.JsonDataModel.csproj
@@ -6,6 +6,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <Import Project="..\SharedProperties.props" /> 
+
   <ItemGroup>
     <ProjectReference Include="..\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.csproj" />
     <ProjectReference Include="..\Bitbird.Core.Json\Bitbird.Core.Json.csproj" />
