--- a/Bitbird.Core.Json/Bitbird.Core.Json.csproj
+++ b/Bitbird.Core.Json/Bitbird.Core.Json.csproj
@@ -11,6 +11,8 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
+  <Import Project="..\SharedProperties.props" /> 
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
