--- a/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
+++ b/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
@@ -6,6 +6,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <Import Project="..\SharedProperties.props" /> 
+
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.94.2" />
   </ItemGroup>
