--- a/Bitbird.Core.Json.Helpers.Base/Bitbird.Core.Json.Helpers.Base.csproj
+++ b/Bitbird.Core.Json.Helpers.Base/Bitbird.Core.Json.Helpers.Base.csproj
@@ -6,6 +6,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <Import Project="..\SharedProperties.props" /> 
+
   <ItemGroup>
     <ProjectReference Include="..\Bitbird.Core.Json\Bitbird.Core.Json.csproj" />
   </ItemGroup>
