unit tests for ticket logging are now logging into bitbird.core project

--- a/Bitbird.Core.Api.AzureReporting.Net.Tests/App.config
+++ b/Bitbird.Core.Api.AzureReporting.Net.Tests/App.config
@@ -3,10 +3,10 @@
 
   <appSettings>
     <add key="AzureReporting.Instance" value="dev.azure.com/btbrd" />
-    <add key="AzureReporting.TeamProject" value="Cleanbird" />
-    <add key="AzureReporting.AccessToken" value="nvylayo6rpm4hz2z5axoje3er5amkm5qvsxsbpexiyvaraneo2da" />
-    <add key="AzureReporting.AreaPath" value="Cleanbird\Software" />
-    <add key="AzureReporting.QueryId" value="53bac8f9-6dc8-42d3-838e-5075b27cbfa9" />
+    <add key="AzureReporting.TeamProject" value="Bitbird.Core" />
+    <add key="AzureReporting.AccessToken" value="2usdskfths3olgyfkp3dprooqkpfufoihiunqdt5mkckxjctld6q" />
+    <add key="AzureReporting.AreaPath" value="Bitbird.Core\Bitbird.Core.Ticketing" />
+    <add key="AzureReporting.QueryId" value="b43f7476-c39c-435f-9113-cf319517752c" />
   </appSettings>
 
 </configuration>
