--- a/Bitbird.Core.WebApi.Net/Bitbird.Core.WebApi.Net.csproj
+++ b/Bitbird.Core.WebApi.Net/Bitbird.Core.WebApi.Net.csproj
@@ -33,6 +33,9 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.WindowsAzure.Configuration, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.WindowsAzure.ConfigurationManager.3.2.3\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -84,11 +87,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContentInfo.cs" />
+    <Compile Include="IBenchmarkController.cs" />
     <Compile Include="JsonApiAttribute.cs" />
     <Compile Include="JsonApiConfiguration.cs" />
     <Compile Include="JsonApiErrorExtensions.cs" />
     <Compile Include="JsonApiErrorFilter.cs" />
     <Compile Include="JsonApiMediaTypeFormatter.cs" />
+    <Compile Include="JsonApiMetaData.cs" />
     <Compile Include="JsonApiResourceMappingAttribute.cs" />
     <Compile Include="JsonApiResultDelegatingHandler.cs" />
     <Compile Include="Models\JsonApiErrorLinks.cs" />
@@ -96,7 +101,7 @@
     <Compile Include="Models\JsonApiErrors.cs" />
     <Compile Include="Models\JsonApiErrorSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-	<Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
   </ItemGroup>
