--- a/Bitbird.Core.Api.AzureReporting.Net.Tests/App.config
+++ b/Bitbird.Core.Api.AzureReporting.Net.Tests/App.config
@@ -4,7 +4,7 @@
   <appSettings>
     <add key="AzureReporting.Instance" value="dev.azure.com/btbrd" />
     <add key="AzureReporting.TeamProject" value="Bitbird.Core" />
-    <add key="AzureReporting.AccessToken" value="2usdskfths3olgyfkp3dprooqkpfufoihiunqdt5mkckxjctld6q" />
+    <add key="AzureReporting.AccessToken" value="" /> <!-- Enter access token for an authorized user here. Don't commit to repository!-->
     <add key="AzureReporting.AreaPath" value="Bitbird.Core\Bitbird.Core.Ticketing" />
     <add key="AzureReporting.QueryId" value="b43f7476-c39c-435f-9113-cf319517752c" />
   </appSettings>
