--- a/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
+++ b/Bitbird.Core.Export.Xlsx/Bitbird.Core.Export.Xlsx.csproj
@@ -6,6 +6,16 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core.Export.Xlsx\Bitbird.Core.Export.Xlsx.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core.Export.Xlsx\Bitbird.Core.Export.Xlsx.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
   <Import Project="..\SharedProperties.props" /> 
 
   <ItemGroup>
