--- a/Bitbird.Core.Json.Helpers.Base/Bitbird.Core.Json.Helpers.Base.csproj
+++ b/Bitbird.Core.Json.Helpers.Base/Bitbird.Core.Json.Helpers.Base.csproj
@@ -6,6 +6,15 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core.Json.Helpers.Base\Bitbird.Core.Json.Helpers.Base.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
   <Import Project="..\SharedProperties.props" /> 
 
   <ItemGroup>
