--- a/Bitbird.Core.Tools.Doc.DotNet/Bitbird.Core.Tools.Doc.DotNet.nuspec
+++ b/Bitbird.Core.Tools.Doc.DotNet/Bitbird.Core.Tools.Doc.DotNet.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata minClientVersion="3.6">
     <id>Bitbird.Core.Tools.Doc.DotNet</id>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <title>Documentation for .NET projects (Bitbird.Core)</title>
     <authors>Bitbird GmbH</authors>
     <owners>Bitbird GmbH</owners>
@@ -13,7 +13,7 @@
     <copyright>Copyright © Bitbird GmbH 2019</copyright>
   </metadata>
   <files>
-    <file src="tools\*" target="tools/"/>
-    <file src="resources\*" target="resources/"/>
+    <file src="tools\**" target="tools/"/>
+    <file src="resources\**" target="resources/"/>
   </files>
 </package>
