--- a/Bitbird.Core.Json/Bitbird.Core.Json.csproj
+++ b/Bitbird.Core.Json/Bitbird.Core.Json.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
   <ItemGroup>
