--- a/Bitbird.Core.WebApi.Net/packages.config
+++ b/Bitbird.Core.WebApi.Net/packages.config
@@ -2,10 +2,10 @@
 <packages>
   <package id="ClosedXML" version="0.94.2" targetFramework="net472" />
   <package id="ClosedXML.Extensions.WebApi" version="0.2.1" targetFramework="net472" />
-  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net472" />
-  <package id="ExcelNumberFormat" version="1.0.5" targetFramework="net472" />
-  <package id="FastMember" version="1.4.1" targetFramework="net472" />
-  <package id="jQuery" version="3.3.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net472" />
+  <package id="FastMember" version="1.3.0" targetFramework="net472" />
+  <package id="jQuery" version="1.6.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
@@ -21,7 +21,8 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
-  <package id="System.IO.Packaging" version="4.5.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
