--- a/Bitbird.Core.Utils.Export.Xlsx/Bitbird.Core.Utils.Export.Xlsx.csproj
+++ b/Bitbird.Core.Utils.Export.Xlsx/Bitbird.Core.Utils.Export.Xlsx.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <LangVersion>7.3</LangVersion>
+    <AssemblyName>Bitbird.Core.Utils.Export.Xlsx</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
