--- a/Bitbird.Core.Api/Bitbird.Core.Api.csproj
+++ b/Bitbird.Core.Api/Bitbird.Core.Api.csproj
@@ -32,11 +32,11 @@
   <ItemGroup>
     <EmbeddedResource Update="Resources.de.resx">
       <LastGenOutput>Resources.de.Designer.cs</LastGenOutput>
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
 
