--- a/Bitbird.Core.Utils.AzureReporting.Net/Bitbird.Core.Utils.AzureReporting.Net.csproj
+++ b/Bitbird.Core.Utils.AzureReporting.Net/Bitbird.Core.Utils.AzureReporting.Net.csproj
@@ -61,6 +61,16 @@
     <Compile Include="Models\IUploadAttachmentModel.cs" />
     <Compile Include="Models\Priority.cs" />
     <Compile Include="Models\Severity.cs" />
+    <Compile Include="Properties\Resources.de.Designer.cs">
+      <DependentUpon>Resources.de.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TicketLogger.cs" />
     <Compile Include="Core\PatchOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,6 +80,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.de.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.de.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
