--- a/Bitbird.Core.Data.NetCore/Bitbird.Core.Data.NetCore.csproj
+++ b/Bitbird.Core.Data.NetCore/Bitbird.Core.Data.NetCore.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
     <PackageId>Bitbird.Core.Data.NetCore</PackageId>
+    <RootNamespace>Bitbird.Core.Data</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
