--- a/Bitbird.Core.Data/Bitbird.Core.Data.csproj
+++ b/Bitbird.Core.Data/Bitbird.Core.Data.csproj
@@ -16,4 +16,22 @@
     <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Validation\ValidationMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ValidationMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Validation\ValidationMessages.de.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Validation\ValidationMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ValidationMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
